--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./src/css/estilo.css">
-    <title>Projeto9</title>
-
+    <link rel="stylsheet" href="./src/css/estilo.css">
+    <title>Projeto 9</title>
 </head>
 <body>
-    <h1>lista de tarefas</h1>
+    <h1>LISTA DE TAREFAS</h1>
+    <p><label for="task">Tarefa:</label>
+        <input type="text" id="task" size="30px">
+    </p>
+    <button id="btnAdicionar" onclick="adicionarTarefa()">Adicionar tarefa</button>
+    <button id="btnRemover" onclick="removerTarefa()">Remover tarefa</button>
+    <p id="lista">
+
+    </p>
+    
+
 
     <script src="./src/js/script.js"></script>
 </body>
